--- a/Vue/index.html
+++ b/Vue/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <!-- 上面引入Script文件 -->
     <script src="js/vue.js"> </script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/dayjs/1.11.0/dayjs.min.js"></script>
     <!-- 基础样式 -->
     <style>
         .cssStyle{
@@ -26,7 +27,7 @@
     <!-- 通过div 创建容器 id为唯一标识符（不能重复使用） 参数设置{{}} 表达式，也可以使用方法调用-->
     <div id="headTitle">
         <!-- 插值语法  写标签内 -->
-        <h1>Hello {{name}},{{est.age}},{{Date.now()}}</h1>
+        <h1>Hello {{name}},{{est.age}},{{time}}</h1>
     <!-- 指令语法 写标签属性 绑定 当做el表达式去指定 -->
         <a v-bind:href="url">指令语法</a>
         <!-- 简写  就剩：了-->
@@ -116,10 +117,13 @@
     <hr/>
     <!-- 表单收集 -->
     <div id="formCollection">
-        <!--  -->
-        <form @sub>
-            账号：<input type="text" v-model="account"> <br/><br/>
+        <!--submit 提交事件 绑定方法sub prevent阻止默认事件（跳转页面）-->
+        <form @submit.prevent="sub">
+            <!--自动省略前后的空格（字符串中间的空格不会省略）-->
+            账号：<input type="text" v-model.trim="account"> <br/><br/>
             密码：<input type="password" v-model="password"> <br/><br/>
+            <!-- typeNumber控制前端数据类型 v-m.number控制后端数据类型，默认都是字符串，需转化再传入后端 -->
+            年龄：<input type="number" v-model.number="age"> <br/><br/>
             性别：
             <!-- 设置name确认为单选组 -->
             <!-- 设置value值告诉后端数据-->
@@ -138,7 +142,8 @@
                 <option value="fujian">福建</option>
             </select>
             其他信息
-            <textarea v-model="other"></textarea>
+            <!-- lazy  只有失去焦点的时候才收集数据 提升性能 -->
+            <textarea v-model.lazy="userInfo.other"></textarea>
             <input type="checkbox" v-model="agree">阅读并接受<a href="http://happyeleven.net">用户协议</a>
             <button>提交</button>
         </form>
@@ -179,7 +184,13 @@
                 url:"http://happyeleven.net",
                 // 可以套变量 j进行层级分类
                 est:{
-                    age:100,
+                    age:'当前时间：',
+                },
+            },
+            computed:{
+                //默认获取当前时间戳 Data.now
+                time(){
+                     return dayjs().format('YYYY-MM-DD HH:mm:ss')
                 }
             }
             //函数式 or data()
@@ -393,11 +404,23 @@
                 name:'表单收集',
                 account:'请输入你的账号',
                 password:'',
+                age:'',
                 sex:'女',//可以设置默认值，在html中会自动匹配相应选项并勾选
                 hobby:[], //多选请设置成数组!
                 city:'beijing',
-                other:'随便写点什么',
-                agree:'true'
+                agree:'true',
+                //最好还是套一层类别，不要直接访问data 这里就不做
+                userInfo:{
+                    other:'随便写点什么',
+                }
+            },
+            methods:{
+                sub(){
+                    alert("提交！"),
+                    //json格式输出 也可以直接输出data
+                    console.log(JSON.stringify(this._data))
+                    console.log(JSON.stringify(this.userInfo))
+                }
             }
         })
 </script>
